<resources>
    <string name="app_name">ShoeApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">Home</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="start">Start</string>
    <string name="goToList">Go To List</string>
    <string name="fillAllFields">Please fill all fields</string>
    <string name="shoesList">Shoes List</string>
    <string name="moreInfo">Get more info</string>
    <string name="emptyList">No found any items !</string>
    <string name="welcome">Welcome to the shoe application </string>
    <string name="welcomeLabel">WELCOME </string>
    <string name="details">DETAILS </string>

    <string name="instruction">Next page will shoe you a list of our shoes.\nPress on items to get more information.</string>
    <string name="goToInstruction">For getting start, please press the button below</string>
    <string name="instructionLabel">Instruction :</string>
    <string name="register">REGISTER</string>
    <string name="shoe_list">Shoes List</string>
    <string name="shoe_label">Shoe Label</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="company">Company</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="save">SAVE</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log Out</string>
</resources>