<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.ShoeDetailsFragment">

    <data>

        <variable
            name="shoeViewModel"
            type="com.keyvani.shoeapplication.viewmodel.ShoeViewModel" />
    </data>
    <!--Constraint layout-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--Shoe Label-->
        <TextView
            android:id="@+id/tvShoeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="sans-serif"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/shoe_label" />
        <!--Shoe Name-->
        <EditText
            android:id="@+id/edtShoeName"
            style="@style/detailsStyle"
            android:hint="@string/shoe_name"
            android:minHeight="48dp"
            android:text="@={shoeViewModel.shoeName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvShoeLabel" />
        <!--Shoe Company-->
        <EditText
            android:id="@+id/edtCompany"
            style="@style/detailsStyle"
            android:hint="@string/company"
            android:minHeight="48dp"
            android:text="@={shoeViewModel.company}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtShoeName" />
        <!--Shoe Size-->
        <EditText
            android:id="@+id/edtSize"
            style="@style/detailsStyle"
            android:hint="@string/size"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@={shoeViewModel.shoeSize}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtCompany" />
        <!--Shoe Description-->
        <EditText
            android:id="@+id/edtDescription"
            style="@style/detailsStyle"
            android:hint="@string/description"
            android:maxLines="4"
            android:minHeight="48dp"
            android:text="@={shoeViewModel.shoeDesc}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtSize" />
        <!--Save Button-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="248dp"
            android:text="@string/save"
            app:backgroundTint="@color/green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnCancel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
        <!--Cancel Button-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="248dp"
            android:text="@string/cancel"
            app:backgroundTint="@color/red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnSave" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>