<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterFragment">


    <!-- Avatar -->
    <ImageView
        android:id="@+id/imgUserAvatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/user_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--Name-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiName"
        style="@style/CustomFilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="40dp"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@id/imgUserAvatar"
        app:startIconDrawable="@drawable/ic_round_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtName"
            style="@style/TextViewLightStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp" />


    </com.google.android.material.textfield.TextInputLayout>
    <!--Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiEmail"
        style="@style/CustomFilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="40dp"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@id/tiName"
        app:startIconDrawable="@drawable/ic_round_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            style="@style/TextViewLightStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp" />


    </com.google.android.material.textfield.TextInputLayout>
    <!--Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPassword"
        style="@style/CustomFilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="40dp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/tiEmail"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/philippineSilver"
        app:startIconDrawable="@drawable/ic_round_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            style="@style/TextViewLightStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp" />


    </com.google.android.material.textfield.TextInputLayout>
    <!--Submit-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"

        android:fontFamily="sans-serif-light"
        android:text="@string/signIn"
        android:textColor="@color/crayola"
        android:textSize="18sp"
        app:cornerRadius="9dp"
        app:layout_constraintEnd_toStartOf="@+id/btnSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tiPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/signUp"
        android:textColor="@color/crayola"
        android:textSize="18sp"
        app:cornerRadius="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSignIn"
        app:layout_constraintTop_toBottomOf="@id/tiPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>